Fix media buttons alignment and border radius

--- a/styles.css
+++ b/styles.css
@@ -168,11 +168,17 @@ body {
     width: 90px;
     background-color: #1992d4;
     border: 0px solid white;
-    border-radius: 8px;
+    border-radius: 16px;
     height: 30px;
     color: white;
     font-family: 'Roboto';
     font-size: 0.8em;
+}
+.media {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 40px;
 }
 
 
